--- a/views/admin/category/edit.hbs
+++ b/views/admin/category/edit.hbs
@@ -20,7 +20,7 @@
 					</button>
 				</div>
 				<div class="col-lg-6">
-					<button type="button" onclick="$(location).attr('href', '/admin/category/index')" class="btn btn-primary btn-register">
+					<button type="button" onclick="$(location).attr('href', '/admin/category/index')" class="btn btn-danger btn-register">
 					<span class="glyphicon glyphicon-list"></span> Quay lại
 					</button>
 				</div>
