--- a/views/admin/order/index.hbs
+++ b/views/admin/order/index.hbs
@@ -20,7 +20,7 @@
 			<td class="td_center">{{UserID}}</td>
 			<td class="td_center">{{number_format Total}}</td>
 			<td class="td_center">{{State}}</td>
-			<td>
+			<td class="td_center">
 				<a class="btn btn-warning btn-sm" href="/admin/order/edit?id={{OrderID}}" role="button">
 					<span class="glyphicon glyphicon-edit"></span>
 				</a>
