--- a/views/error/processingError.hbs
+++ b/views/error/processingError.hbs
@@ -7,12 +7,13 @@
 
 		.error-container {
     		margin-top: 80px;
+    		margin-bottom: 100px;
 		}
 
 		.error-message {
-    		font-size: 28px;
+    		font-size: 24px;
     		color: #4a4a4a;
-    		margin-top: 20px;
+    		margin-top: 30px;
     		margin-bottom: 20px;
 		}
 
@@ -24,7 +25,7 @@
 {{/section}}
 
 <div class="error-container">
-	<img src="/image/sad.png" width="300px">
+	<img src="/image/sad.png" height="250px">
 	<p class="error-message">Rất tiếc đã xảy ra lỗi. Vui lòng thử lại sau.</p>
 	<a class="lnk-home" href="/">VỀ TRANG CHỦ</a>
 </div>
