--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -69,7 +69,7 @@
 			</div>
 			<hr><div class="row">
 				<div class="col-lg-3">Mô tả:</div>
-				<div class="col-lg-9">{{Description}}</div>
+				<div class="col-lg-9">{{TinyDes}}</div>
 			</div>
 		</div>
 	</div>
