--- a/public/assets/css/product.css
+++ b/public/assets/css/product.css
@@ -46,3 +46,16 @@
 .card-li {
 	text-align: center;
 }
+
+.noproduct-container {
+	margin-top: 45px;
+    text-align: center;
+    padding: 50px;
+}
+
+.noproduct-message {
+    font-size: 24px;
+    color: #4a4a4a;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
