--- a/views/account/changepassword.hbs
+++ b/views/account/changepassword.hbs
@@ -1,19 +1,35 @@
 {{#section 'css'}}
-<link rel="stylesheet" type="text/css" href="/assets/css/login.css">
-<link rel="stylesheet" type="text/css" href="/assets/css/register.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/profile.css">
 {{/section}}
-
-<h3 class="container-custom pane-header">Đổi mật khẩu</h3>
-<div class="container-custom white-background">
-	<form action="" method="post">
-		<div id="username-title">Mật khẩu hiện tại</div>
-		<input name="cur_password" type="password" class="form-control box" placeholder="Vui lòng nhập mật khẩu hiện tại">
-		<span id="username-message" class="error-message">{{wrong_password}}</span><br>
-		<div id="password-title">Mật khẩu mới</div>
-		<input name="new_password" type="password" class="form-control box" placeholder="Vui lòng nhập mật khẩu mới">
-		<div id="password-title">Xác nhận mật khẩu mới</div>
-		<input name="confirm_password" type="password" class="form-control box" placeholder="Vui lòng nhập lại mật khẩu mới">
-		<span id="username-message" class="error-message">{{wrong_confirm}}</span><br>
-		<button  id="btn-sign-in" type="submit" class="btn btn-success">Đổi mật khẩu</button>
-	</form>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-2 btn-contain">
+			<a class="btn btn-primary order-btn" href="/account/profile">CẬP NHẬT THÔNG TIN</a>
+			<a class="btn btn-primary order-btn btn-down" href="/account/order">LỊCH SỬ MUA HÀNG</a>
+		</div>
+		<div class="col-lg-10">
+			<h3 class="header-title">ĐỔI MẬT KHẨU</h3>
+			<div class="row body-container">
+				<div class="col-lg-3"></div>
+				<div class="col-lg-9"><form action="" method="POST">
+					<div class="col-lg-6">
+						<div class="head-box-title">Mật khẩu hiện tại</div>
+						<input name="cur_password" type="password" class="form-control box" placeholder="Vui lòng nhập mật khẩu hiện tại">
+						<div class="box-title">Mật khẩu mới</div>
+						<input name="new_password" type="password" class="form-control box" placeholder="Vui lòng nhập mật khẩu mới">
+						<div class="box-title">Xác nhận mật khẩu mới</div>
+						<input name="confirm_password" type="password" class="form-control box" placeholder="Vui lòng nhập lại mật khẩu mới">
+						<button  id="btn-sign-in" type="submit" class="btn btn-success btn-change-password">Đổi mật khẩu</button>
+					</div>
+				</form></div>
+			</div>
+		</div>
+	</div>
 </div>
+{{#section 'js'}}
+{{#if isAlert}}
+<script type="text/javascript">
+    alert("{{message}}");    
+</script>
+{{/if}}
+{{/section}}
