--- a/views/account/register.hbs
+++ b/views/account/register.hbs
@@ -5,7 +5,7 @@
 {{/section}}
 
 <h3 class="my-container header-title">Tạo tài khoản</h3>
-<div class="my-container footer body-container">
+<div class="my-container body-container">
 	{{#if isSuccess}}
 	<div class="alert alert-success">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
