--- a/views/admin/category/add.hbs
+++ b/views/admin/category/add.hbs
@@ -3,7 +3,7 @@
 {{/section}}
 
 {{#section 'css'}}
-<link rel="stylesheet" type="text/css" href="/assets/css/register.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/admin.css">
 {{/section}}
 <form action="" method="POST" style="margin: 30px">
 	<div class="row">
@@ -12,12 +12,12 @@
 			<input name="CatName" type="text" class="form-control box" placeholder="Nhập tên danh mục" required>
 			<div class="row">
 				<div class="col-lg-6">
-					<button class="btn btn-success btn-register" type="submit">
+					<button class="btn btn-success btn-edit-cat" type="submit">
 					<span class="glyphicon glyphicon-edit"></span> Thêm danh mục
 					</button>
 				</div>
 				<div class="col-lg-6">
-					<button type="button" onclick="$(location).attr('href', '/admin/category/index')" class="btn btn-primary btn-register">
+					<button type="button" onclick="$(location).attr('href', '/admin/category/index')" class="btn btn-danger btn-edit-cat">
 					<span class="glyphicon glyphicon-list"></span> Quay lại
 					</button>
 				</div>
