--- a/views/admin/order/edit.hbs
+++ b/views/admin/order/edit.hbs
@@ -2,7 +2,7 @@
 <h3>Quản lý đơn hàng</h3>
 {{/section}}
 {{#section 'css'}}
-<link rel="stylesheet" type="text/css" href="/assets/css/register.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/admin.css">
 {{/section}}
 {{#with order}}
 <form action="" method="POST" style="margin: 30px">
@@ -14,7 +14,9 @@
 			<input name="OrderDate" type="text" class="form-control box" value="{{OrderDate}}" readonly>
 			<div class="box-title">Người đặt</div>
 			<input name="UserID" type="text" class="form-control box" value="{{UserID}}" readonly>
-			<div class="box-title">Tổng tiền</div>
+		</div>
+		<div class="col-lg-6">
+			<div class="head-box-title">Tổng tiền</div>
 			<input name="Total" type="text" class="form-control box" value="{{number_format Total}}" readonly>
 			<div class="box-title">Tình trạng đơn hàng</div>
 			<select name="State" class="form-control box">
@@ -24,12 +26,12 @@
 			</select>
 			<div class="row">
 				<div class="col-lg-6">
-					<button class="btn btn-success btn-register" type="submit">
+					<button class="btn btn-success btn-edit-product" type="submit">
 					<span class="glyphicon glyphicon-edit"></span> Chỉnh sửa
 					</button>
 				</div>
 				<div class="col-lg-6">
-					<button type="button" onclick="$(location).attr('href', '/admin/order/index')" class="btn btn-primary btn-register">
+					<button type="button" onclick="$(location).attr('href', '/admin/order/index')" class="btn btn-danger btn-edit-product">
 					<span class="glyphicon glyphicon-list"></span> Quay lại
 					</button>
 				</div>
