--- a/views/admin/product/delete.hbs
+++ b/views/admin/product/delete.hbs
@@ -2,21 +2,21 @@
 <h3>Xoá sản phẩm</h3>
 {{/section}}
 {{#section 'css'}}
-	<link rel="stylesheet" type="text/css" href="/assets/css/register.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/admin.css">
 {{/section}}
 <form action="" method="POST" style="margin: 30px">
 	<div class="row">
 		<div class="col-lg-6">
-			<div class="head-box-title">Bạn có muốn xoá sản phẩm này?</div>
+			<div class="delete-message">Bạn có muốn xoá {{name}}?</div>
 			<input name="ProID" type="text" class="form-control box hidden" value="{{id}}">
 			<div class="row">
 				<div class="col-lg-6">
-					<button class="btn btn-success btn-register" type="submit">
+					<button class="btn btn-success btn-edit-product" type="submit">
 					<span class="glyphicon glyphicon-trash"></span> Xoá sản phẩm
 					</button>
 				</div>
 				<div class="col-lg-6">
-					<button type="button" onclick="$(location).attr('href', '/admin/product/index')" class="btn btn-primary btn-register">
+					<button type="button" onclick="$(location).attr('href', '/admin/product/index')" class="btn btn-danger btn-edit-product">
 					<span class="glyphicon glyphicon-list"></span> Quay lại
 					</button>
 				</div>
