--- a/views/error/404Error.hbs
+++ b/views/error/404Error.hbs
@@ -7,10 +7,11 @@
 
 		.error-container {
     		margin-top: 50px;
+    		margin-bottom: 100px;
 		}
 
 		.error-message {
-    		font-size: 28px;
+    		font-size: 24px;
     		color: #4a4a4a;
     		margin-bottom: 30px;
 		}
@@ -23,7 +24,7 @@
 {{/section}}
 
 <div class="error-container">
-	<img src="/image/error.jpg" width="600px">
+	<img src="/image/error.jpg" height="300px">
 	<p class="error-message">Trang không tồn tại hoặc đã bị xoá</p>
 	<a class="lnk-home" href="/">VỀ TRANG CHỦ</a>
 </div>
